2004-09-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Moved proto_node,
	proto_node_class member definitions to unnamed namespace.

2004-08-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Moved proto_node,
	proto_node_class to unnamed namespace (from openvrml).

2004-08-30 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc:  Added nothrow
	exception specification to GtkGLViewer::~GtkGLViewer.

2004-07-24 Braden McDaniel  <braden@endoframe.com>

	* src/lookat/lookat.cpp:  Instantiate the viewer before the
	instantiating the browser so that the viewer is destroyed after
	the browser.

2004-07-19 Braden McDaniel  <braden@endoframe.com>

	Changed unsupported_interface and field_value_type_mismatch to
	inherit std::logic_error instead of std::runtime_error.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-07-19 Braden McDaniel  <braden@endoframe.com>

	Removed unsupported_interface constructor that takes only a
	string.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2004-07-18 Braden McDaniel  <braden@endoframe.com>

	delete_route should throw unsupported_interface.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-07-18 Braden McDaniel  <braden@endoframe.com>

	Allow viewers to be associated with and detached from browsers.
	This is not optimal, but we need to retain a viewer reference so
	that destroyed nodes can deallocate resources allocated in the
	renderer.  To really handle this properly, we probably need to
	have viewers created from a factory function on browser.  But to
	implement that, we need to be able to register viewer
	implementations; and we're not in a position to do that yet.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h