@@ -1,3 +1,11 @@
+2004-09-17 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/browser.cpp:  Changed
+	DefaultViewpoint class to default_viewpoint; moved to unnamed
+	namespace.
+	* src/libopenvrml/openvrml/browser.h:  Changed
+	browser::default_viewpoint to browser::default_viewpoint_.
+
 2004-09-16 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/browser.cpp:  Moved proto_node,
